# CMPE185_Project

./: .gitignore  .gitmodules  README.md
CMPE185_ws/src/camera_node/: CMakeLists.txt  package.xml
CMPE185_ws/src/camera_node/include/: camera.hpp  camera_node.hpp
CMPE185_ws/src/camera_node/launch/: camera.launch  ros2bag_file.launch
CMPE185_ws/src/camera_node/src/: camera.cpp  camera_node.cpp  camera_node_main.cpp
CMPE185_ws/src/objdetect_node/: CMakeLists.txt  package.xml
CMPE185_ws/src/objdetect_node/class_labels/: coco80.txt
CMPE185_ws/src/objdetect_node/conf/: conf.rviz
CMPE185_ws/src/objdetect_node/install/: local_setup.sh  setup.sh
CMPE185_ws/src/objdetect_node/install/yolov7_ros/share/yolov7_ros/: local_setup.sh  package.bash  package.sh  package.xml  package.zsh
CMPE185_ws/src/objdetect_node/install/yolov7_ros/share/yolov7_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  yolov7_rosConfig.cmake
CMPE185_ws/src/objdetect_node/launch/: objdetect.launch  yolov7.launch
CMPE185_ws/src/objdetect_node/log/: latest_build
CMPE185_ws/src/objdetect_node/objdetect_node/: detect_ros.py
CMPE185_ws/src/objdetect_node/objdetect_node/utils/: ros.py
install/: local_setup.sh  setup.sh
install/camera_node/lib/camera_node/: camera_node_exe
install/camera_node/share/camera_node/: package.bash  package.sh  package.zsh
log/: latest_build
